--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,17 @@
 
 # compiled output
 /dist
-/dist-lib
 /tmp
 /out-tsc
-dist-lib.tgz
+# Only exists if Bazel was run
+/bazel-out
 
 # dependencies
 /node_modules
+
+# profiling files
+chrome-profiler-events.json
+speed-measure-plugin.json
 
 # IDEs and editors
 /.idea
@@ -25,7 +29,7 @@ dist-lib.tgz
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.vscode
+.history/*
 
 # misc
 /.sass-cache
@@ -33,20 +37,12 @@ dist-lib.tgz
 /coverage
 /libpeerconnection.log
 npm-debug.log
+yarn-error.log
 testem.log
 /typings
-yarn-error.log
-
-# e2e
-/e2e/*.js
-/e2e/*.map
 
 # System Files
 .DS_Store
 Thumbs.db
-package-lock.json
-settings.json
 
-
-TODO.md
-ng-multiselect-dropdown - Copy
+/dist-lib/**
