--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ng-multiselect-dropdown-angular7",
-  "version": "0.1.5",
+  "name": "ng-multiselect-dropdown-angular-latest",
+  "version": "0.1.6",
   "private": false,
-  "description": "Angular 7 Multi-Select Dropdown",
-  "author": "Demon King",
+  "description": "Angular Multi-Select Dropdown",
+  "author": "haison8x",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -14,58 +14,49 @@
     "test": "jest --watch",
     "test:ci": "jest --runInBand",
     "test:coverage": "jest --coverage",
-    "build:prod": "ng build --prod --base-href https://demonking99.github.io/ng-multiselect-dropdown-angular7/",
+    "build:prod": "ng build --prod --base-href https://haison8x.github.io/ng-multiselect-dropdown-latest/",
     "clear:lib": "rimraf dist-lib",
-    "copyfiles": "copyfiles -u 1 ./dist-lib/**/*.* node_modules/ng-multiselect-dropdown-angular7",
+    "copyfiles": "copyfiles -u 1 ./dist-lib/**/*.* node_modules/ng-multiselect-dropdown-latest",
     "build:lib": "yarn clear:lib && ng-packagr -p ng-package.json",
     "postbuild:lib": "yarn copyfiles",
     "prepublish": "yarn build:prod",
-    "publish": "ngh --no-silent false --name=\"demonking99\" --email=\"subhankar99@gmail.com\"",
-    "deploy": "ng build --prod --bh /ng-multiselect-dropdown-angular7/ && angular-cli-ghpages --no-silent --repo=https://github.com/demonking99/ng-multiselect-dropdown-angular7.git --name=\"Demon King\" --email=subhankar99@gmail.com",
-    "deployOnly": "angular-cli-ghpages --no-silent --repo=https://github.com/demonking99/ng-multiselect-dropdown-angular7.git --name=\"Demon King\" --email=subhankar99@gmail.com"
+    "publish": "ngh --no-silent false --name=\"haison8x\" --email=\"haison8x@gmail.com\"",
+    "deploy": "ng build --prod --bh /ng-multiselect-dropdown-angular7/ && angular-cli-ghpages --no-silent --repo=https://github.com/haison8x/ng-multiselect-dropdown-latest.git --name=\"haison8x\" --email=haison8x@gmail.com",
+    "deployOnly": "angular-cli-ghpages --no-silent --repo=https://github.com/haison8x/ng-multiselect-dropdown-latest.git --name=\"haison8x\" --email=haison8x@gmail.com"
   },
   "keywords": [
-    "angular2",
-    "angular7",
     "angular multiselect dropdown",
-    "angular2 multiselect dropdown",
-    "angular7 multiselect dropdown",
-    "ng multiselect dropdown",
-    "ng7 multiselect dropdown",
-    "ng7 multiselect dropdown"
+    "ng multiselect dropdown"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/demonking99/ng-multiselect-dropdown-angular7.git"
+    "url": "git+https://github.com/haison8x/ng-multiselect-dropdown-latest.git"
   },
   "bugs": {
-    "url": "https://github.com/demonking99/ng-multiselect-dropdown-angular7/issues"
+    "url": "https://github.com/haison8x/ng-multiselect-dropdown-latest/issues"
   },
-  "homepage": "https://github.com/demonking99/ng-multiselect-dropdown-angular7#readme",
+  "homepage": "https://github.com/haison8x/ng-multiselect-dropdown-latest#readme",
   "peerDependencies": {
-    "@angular/common": "7.2.15",
-    "@angular/core": "7.2.15"
+    "@angular/common": "8.1.2",
+    "@angular/core": "8.1.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/animations": "^7.2.15",
-    "@angular/cli": "^7.3.9",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
+    "@angular-devkit/build-angular": "^0.801.2",
+    "@angular/animations": "^8.1.2",
+    "@angular/cli": "^8.1.2",
+    "@angular/common": "^8.1.2",
+    "@angular/compiler": "^8.1.2",
+    "@angular/compiler-cli": "^8.1.2",
+    "@angular/core": "^8.1.2",
+    "@angular/forms": "^8.1.2",
     "@angular/http": "^7.2.15",
-    "@angular/language-service": "^5.2.9",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
-    "@types/jasmine": "^3.3.12",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^12.0.0",
-    "angular-cli-ghpages": "^0.5.2",
-    "angular-library-builder": "^1.5.12",
-    "angular2-markdown": "^1.6.0",
+    "@angular/language-service": "^8.1.2",
+    "@angular/platform-browser": "^8.1.2",
+    "@angular/platform-browser-dynamic": "^8.1.2",
+    "@angular/router": "^8.1.2",
+    "@types/jasmine": "^3.3.14",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^12.6.8",
     "codelyzer": "^5.0.1",
     "copyfiles": "^2.0.0",
     "core-js": "^2.5.4",
@@ -76,21 +67,22 @@
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-multiselect-dropdown-angular7": "^0.2.3",
     "ng-packagr": "^3.0.6",
-    "ngx-bootstrap": "^2.0.3",
+    "ngx-bootstrap": "^2.0.5",
+    "node-gyp": "^5.0.3",
+    "node-sass": "^4.12.0",
     "protractor": "^5.4.2",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.5.1",
-    "rxjs-compat": "^6.5.1",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "rxjs-tslint": "^0.1.7",
-    "ts-node": "~3.0.4",
+    "ts-node": "~7.0.0",
     "tsickle": "^0.35.0",
     "tslint": "^5.16.0",
-    "typescript": "^3.1.6",
+    "typescript": "~3.4.3",
     "webpack": "^4.31.0",
     "zone.js": "^0.9.1"
   },
