--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-multiselect-dropdown-angular7-base": {
+    "ng-multiselect-dropdown-base": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -16,13 +16,8 @@
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
-            "assets": [
-              "src/assets",
-              "src/favicon.ico"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "assets": ["src/assets", "src/favicon.ico"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -48,18 +43,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-multiselect-dropdown-angular7-base:build"
+            "browserTarget": "ng-multiselect-dropdown-base:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-multiselect-dropdown-angular7-base:build:production"
+              "browserTarget": "ng-multiselect-dropdown-base:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-multiselect-dropdown-angular7-base:build"
+            "browserTarget": "ng-multiselect-dropdown-base:build"
           }
         },
         "test": {
@@ -70,30 +65,20 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "assets": [
-              "src/assets",
-              "src/favicon.ico"
-            ]
+            "styles": ["src/styles.scss"],
+            "assets": ["src/assets", "src/favicon.ico"]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
     },
-    "ng-multiselect-dropdown-angular7-base-e2e": {
+    "ng-multiselect-dropdown-base-e2e": {
       "root": "",
       "sourceRoot": "e2e",
       "projectType": "application",
@@ -102,24 +87,20 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "ng-multiselect-dropdown-angular7-base:serve"
+            "devServerTarget": "ng-multiselect-dropdown-base:serve"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
     }
   },
-  "defaultProject": "ng-multiselect-dropdown-angular7-base",
+  "defaultProject": "ng-multiselect-dropdown-base",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "ng",
